src/objects/AcctSeed__Financial_Report_Column__c.object
<CustomObject>
    <description>Defines column based formatting and configuration settings for a specific column in a financial report. This record is associated with a financial report definition and is used in the financial suite report writer.</description>
    <fields>
        <fullName>AcctSeed__Calculation__c</fullName>
        <inlineHelpText>Used to add, subtract, multiply or divide columns.</inlineHelpText>
        <label>Calculation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Column_Overide_Row__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used when a cell has an intersection of both a column and a row with a calculation and your would like to display the column calculation rather than the row.</inlineHelpText>
        <label>Column Override Row</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Financial_Report_Definition__c</fullName>
        <label>Financial Statement Definition</label>
        <referenceTo>AcctSeed__Financial_Report_Definition__c</referenceTo>
        <relationshipLabel>Financial Statement Columns</relationshipLabel>
        <relationshipName>Financial_Report_Columns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Header_1_Value__c</fullName>
        <inlineHelpText>Shows the period name or your own custom text.</inlineHelpText>
        <label>Header 1 Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                    <label>Text</label>
                </value>
                <value>
                    <fullName>Period Name</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Header_1__c</fullName>
        <inlineHelpText>Used to show your own custom text when this option is selected in Header Value 1.</inlineHelpText>
        <label>Header 1 Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Header_2_Value__c</fullName>
        <inlineHelpText>Shows the period name or your own custom text below Header 1.</inlineHelpText>
        <label>Header 2 Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Period Name</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Header_2__c</fullName>
        <inlineHelpText>Used to show your own custom text when this option is selected in Header Value 2.</inlineHelpText>
        <label>Header 2 Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Ledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ledger</label>
        <referenceTo>AcctSeed__Ledger__c</referenceTo>
        <relationshipName>Financial_Reports_Columns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Offset__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Used when running comparative periods in a single report. Number of periods before or after period selected when running the report. Zero is the period selected. A negative value will show periods before, a positive value will show periods after.</inlineHelpText>
        <label>Offset</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Position__c</fullName>
        <inlineHelpText>The position of the column from left to right.</inlineHelpText>
        <label>Position</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Suppress_Print__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Suppress the print of the column.</inlineHelpText>
        <label>Suppress Print</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Type__c</fullName>
        <inlineHelpText>The value to display in the column.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current Period</fullName>
                    <default>true</default>
                    <label>Current Period</label>
                </value>
                <value>
                    <fullName>Year To Date</fullName>
                </value>
                <value>
                    <fullName>Calculation Number</fullName>
                </value>
                <value>
                    <fullName>Calculation Percentage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Financial Statement Column</label>
    <nameField>
        <displayFormat>FRC-{00000}</displayFormat>
        <label>Financial Statement Column Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Statement Columns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>